Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationBigBlandWithBadCharacters-36Chomped.calc
a .0E2%3 b 1.E2%5 c 2.3E3%1 d 34.5E4%5 e 6.78E7%3 f 99.99E5%6 g 3E9%3 h 76E4%5